feat: added all fr gap's features
